@@ -32,8 +32,6 @@ import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.server.control.BaseSimpleCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -44,7 +42,7 @@ public class CreateClubCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
             new FieldDefinition("ClubName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("SubscriptionTypeName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("ClubPriceFilterName", FieldType.ENTITY_NAME, false, null, null),
@@ -52,7 +50,7 @@ public class CreateClubCommand
             new FieldDefinition("IsDefault", FieldType.BOOLEAN, true, null, null),
             new FieldDefinition("SortOrder", FieldType.SIGNED_INTEGER, true, null, null),
             new FieldDefinition("Description", FieldType.STRING, false, 1L, 132L)
-        ));
+        );
     }
     
     /** Creates a new instance of CreateClubCommand */
