@@ -24,8 +24,7 @@ import com.echothree.util.server.control.BaseSimpleCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import javax.enterprise.context.Dependent;
 
 @Dependent
@@ -35,9 +34,9 @@ public class RemovedExpiredEntityLocksCommand
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null)
-                )));
+        ));
     }
     
     /** Creates a new instance of RemovedExpiredEntityLocksCommand */
