@@ -32,8 +32,6 @@ import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -52,9 +50,9 @@ public class GetTerminationTypeDescriptionsCommand
                 ))
         ));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
             new FieldDefinition("TerminationTypeName", FieldType.ENTITY_NAME, true, null, null)
-        ));
+        );
     }
     
     /** Creates a new instance of GetTerminationTypeDescriptionsCommand */
