@@ -30,8 +30,6 @@ import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.server.control.BaseSimpleCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -42,7 +40,7 @@ public class CreateForumCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("ForumName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("ForumTypeName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("IconName", FieldType.ENTITY_NAME, false, null, null),
@@ -50,7 +48,7 @@ public class CreateForumCommand
                 new FieldDefinition("ForumMessageSequenceName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("SortOrder", FieldType.SIGNED_INTEGER, true, null, null),
                 new FieldDefinition("Description", FieldType.STRING, false, 1L, 132L)
-                ));
+                );
     }
     
     /** Creates a new instance of CreateForumCommand */
