@@ -37,8 +37,6 @@ import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.server.persistence.Session;
 import com.google.common.base.Splitter;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -49,7 +47,7 @@ public class SearchItemsCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("LanguageIsoName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("SearchDefaultOperatorName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("SearchSortDirectionName", FieldType.ENTITY_NAME, false, null, null),
@@ -66,7 +64,7 @@ public class SearchItemsCommand
                 new FieldDefinition("Fields", FieldType.STRING, false, null, null),
                 new FieldDefinition("RememberPreferences", FieldType.BOOLEAN, false, null, null),
                 new FieldDefinition("SearchUseTypeName", FieldType.ENTITY_NAME, false, null, null)
-                ));
+                );
     }
 
     /** Creates a new instance of SearchItemsCommand */
