@@ -39,8 +39,6 @@ import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -60,19 +58,19 @@ public class EditLocationCommand
                 ))
         ));
 
-        SPEC_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        SPEC_FIELD_DEFINITIONS = List.of(
             new FieldDefinition("WarehouseName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("LocationName", FieldType.ENTITY_NAME, true, null, null)
-        ));
+        );
         
-        EDIT_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        EDIT_FIELD_DEFINITIONS = List.of(
             new FieldDefinition("LocationName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("LocationTypeName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("LocationUseTypeName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("Velocity", FieldType.UNSIGNED_INTEGER, true, null, null),
             new FieldDefinition("InventoryLocationGroupName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("Description", FieldType.STRING, false, 1L, 132L)
-        ));
+        );
     }
     
     /** Creates a new instance of EditLocationCommand */
