@@ -36,8 +36,6 @@ import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -57,19 +55,19 @@ public class EditLocationNameElementCommand
                 ))
         ));
 
-        SPEC_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        SPEC_FIELD_DEFINITIONS = List.of(
             new FieldDefinition("WarehouseName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("LocationTypeName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("LocationNameElementName", FieldType.ENTITY_NAME, true, null, null)
-        ));
+        );
         
-        EDIT_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        EDIT_FIELD_DEFINITIONS = List.of(
             new FieldDefinition("LocationNameElementName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("Offset", FieldType.UNSIGNED_INTEGER, true, null, null),
             new FieldDefinition("Length", FieldType.UNSIGNED_INTEGER, true, null, null),
             new FieldDefinition("ValidationPattern", FieldType.REGULAR_EXPRESSION, false, null, null),
             new FieldDefinition("Description", FieldType.STRING, false, 1L, 132L)
-        ));
+        );
     }
 
     /** Creates a new instance of EditLocationNameElementCommand */
