@@ -30,8 +30,6 @@ import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.server.control.BaseSimpleCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -42,10 +40,10 @@ public class GetWishlistLinesCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
             new FieldDefinition("WishlistName", FieldType.ENTITY_NAME, false, null, null),
             new FieldDefinition("ItemName", FieldType.ENTITY_NAME, false, null, null)
-        ));
+        );
     }
     
     /** Creates a new instance of GetWishlistLinesCommand */
