@@ -31,8 +31,6 @@ import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.command.EditMode;
 import com.echothree.util.server.control.BaseEditCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -44,15 +42,15 @@ public class EditWorkEffortScopeDescriptionCommand
     private final static List<FieldDefinition> EDIT_FIELD_DEFINITIONS;
     
     static {
-        SPEC_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        SPEC_FIELD_DEFINITIONS = List.of(
             new FieldDefinition("WorkEffortTypeName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("WorkEffortScopeName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("LanguageIsoName", FieldType.ENTITY_NAME, true, null, null)
-        ));
+        );
         
-        EDIT_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        EDIT_FIELD_DEFINITIONS = List.of(
             new FieldDefinition("Description", FieldType.STRING, true, 1L, 132L)
-        ));
+        );
     }
     
     /** Creates a new instance of EditWorkEffortScopeDescriptionCommand */
